cloud/krystal/buggy-code/buggy-code-errors.txt
In file included from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/esp_additions/include/freertos/idf_additions.h:21,
                 from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:1533,
                 from C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.1.1\cores\esp32/Arduino.h:33,
                 from C:\Users\kryst\AppData\Local\arduino\sketches\F91D6B828960D7D80028F00A6EA6CFBD\sketch\mariam-cloud.ino.cpp:1:
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino: In function 'void ProcessTask(void*)':
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:421:48: error: 'DataCopy' was not declared in this scope
  421 |                   if (xQueueSend(cloud_Queue, &DataCopy, 500 / portTICK_PERIOD_MS) == pdTRUE){
      |                                                ^~~~~~~~
C:\Users\kryst\AppData\Local\Arduino15\packages\esp32\tools\esp32-arduino-libs\idf-release_v5.3-cfea4f7c-v1\esp32/include/freertos/FreeRTOS-Kernel/include/freertos/queue.h:470:38: note: in definition of macro 'xQueueSend'
  470 |     xQueueGenericSend( ( xQueue ), ( pvItemToQueue ), ( xTicksToWait ), queueSEND_TO_BACK )
      |                                      ^~~~~~~~~~~~~

exit status 1

Compilation error: 'DataCopy' was not declared in this scope
